--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nestjs-security",
-  "version": "0.0.0",
-  "description": "A blank schematics",
+  "version": "0.0.1",
+  "description": "Create a schematics to implement NestJS security",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.json",
@@ -12,20 +12,40 @@
     "manual-test": "npm run build && schematics .:nest-add"
   },
   "keywords": [
-    "schematics"
+    "schematics",
+    "nestjs",
+    "security",
+    "cors",
+    "helmet",
+    "validation"
   ],
   "author": "",
   "license": "MIT",
+  "bugs": "https://github.com/railsstudent/nestjs-linit-tools/issues",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/railsstudent/nestjs-lint-tools.git"
+  },
+  "homepage": "https://github.com/railsstudent/nestjs-lint-tools#readme",
   "schematics": "./dist/collection.json",
+  "nest-add": {
+    "save": "devDependencies"
+  },
   "dependencies": {
     "@angular-devkit/core": "13.3.0",
     "@angular-devkit/schematics": "13.3.0",
     "@schematics/angular": "13.3.0"
   },
   "devDependencies": {
+    "@nestjs/common": "8.4.7",
+    "@types/compression": "1.7.2",
+    "@types/express": "4.17.13",
     "@types/jasmine": "4.0.0",
     "@types/node": "^14.15.0",
+    "compression": "1.7.4",
     "cpx": "1.5.0",
+    "express": "4.18.1",
+    "helmet": "5.1.1",
     "jasmine": "4.0.0",
     "rimraf": "3.0.2",
     "typescript": "4.7.2"
