--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@nestjs/common": "8.4.7",
+    "@nestjs/throttler": "^2.0.1",
     "@types/compression": "1.7.2",
     "@types/express": "4.17.13",
     "@types/jasmine": "4.0.0",
