--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "types": ["jasmine", "node"]
   },
   "include": ["schematics/**/*"],
-  "exclude": ["schematics/*/files/**/*"]
+  "exclude": ["schematics/*/bootstrap/**/*", "schematics/*/configs/**/*"]
 }
